# kiwix-build

./: .gitignore  .travis.yml  Dockerfile  MANIFEST.in  README.md  appveyor.yml  build_custom_app.pl  build_custom_app.py  build_vanilla_app.pl  build_vanilla_app.py  dependencies.py  dependency_utils.py  dependency_versions.py  kiwix-build.py  kiwix-deploy.py  pyproject.toml  requirements.txt  requirements_build_custom_app.txt  setup.cfg  setup.py  tasks.py  utils.py
.github/ci_images/: alpine_builder.dockerfile  bionic_builder.dockerfile  f30_builder.dockerfile  f31_builder.dockerfile  f35_builder.dockerfile  focal_builder.dockerfile  xenial_builder.dockerfile
.github/configs/: aqt.ini
.github/scripts/: build_definition.py  build_projects.py  build_release_nightly.py  common.py  compile_all_deps.py  ensure_base_deps.py  print_info.py  trigger_docker_workflow.py  upload_failure_logs.py  upload_failure_logs.sh  upload_to_bintray.py
.github/workflows/: QA.yml  base.yml  cd.yml  cd_flathub_test.yml  ci.yml  container.yml  container_images.yml  libcurl.yml  lint.yml  releaseNigthly.yml
actions/dl_deps_archive/: README.md  action.yml  index.js  package-lock.json  package.json
appveyor/: apply_patch.sh  build_xapian.sh  create_cache.sh  deploy.sh  fix_desktop_makefile.py  install_aria2.cmd  install_dirent.cmd  install_getopt.cmd  install_git_ninja_pkgconfig.cmd  install_icu.cmd  install_kiwix-desktop.cmd  install_kiwix-lib.cmd  install_kiwix-tools.cmd  install_libcurl.cmd  install_libkiwix.cmd  install_libmicrohttpd.cmd  install_libzim.cmd  install_lzma.cmd  install_mustache.cmd  install_pthread.cmd  install_pugixml.cmd  install_xapian.cmd  install_zlib.cmd  install_zstd.cmd  kiwix.p12.enc  kiwix.pfx.enc  nightlybot_id_key.enc  package_kiwix-desktop.sh  publish_xapian.sh  setup_from_cache.cmd
ci_images/: alpine_builder.dockerfile  bionic_builder.dockerfile  f35_builder.dockerfile  focal_builder.dockerfile
kiwixbuild/: __init__.py  __main__.py  _global.py  buildenv.py  builder.py  dependencies.py  dependency_utils.py  dependency_versions.py  flatpak_builder.py  packages.py  utils.py  versions.py
kiwixbuild/configs/: __init__.py  android.py  apple.py  armhf.py  base.py  flatpak.py  i586.py  ios.py  musl.py  native.py  neutral.py  wasm.py  win32.py  win64.py  winbash.py
kiwixbuild/dependencies/: __init__.py  all_dependencies.py  android_ndk.py  android_sdk.py  apple_xcframework.py  aria2.py  arm_musl.py  armhf.py  base.py  boostregex.py  ctpp2.py  docoptcpp.py  emsdk.py  flatpak.py  gradle.py  gumbo.py  icu4c.py  icu4c_data_filter.json  ios_fat_lib.py  kiwix_android.py  kiwix_custom_app.py  kiwix_desktop.py  kiwix_desktop_flatpak.py  kiwix_lib.py  kiwix_tools.py  libaria2.py  libcurl.py  libkiwix.py  libmagic.py  libmicrohttpd.py  libzim.py  lzma.py  mustache.py  pugixml.py  qt.py  tc_android_ndk.py  tc_armhf.py  tc_emsdk.py  tc_flatpak.py  tc_musl.py  (+8 more)
kiwixbuild/patches/: android-ndk-r21e-linux-x86_64-python3.12+.patch  android-ndk-r23c-linux-x86_64.patch  ctpp2_compile_ctpp2c_static.patch  ctpp2_fix-static-libname.patch  ctpp2_no_src_modification.patch  ctpp2_win_install_lib_in_lib_dir.patch  docopt_meson_install_pkgconfig.patch  docopt_meson_use_boostregex.patch  fixenv-nonstd-libdir  fixenv-nonstd-libdir.sh  fixenv-run-in-nonstd-installdir.sh  flatpak_meson.patch  icu4c_android_elf64_st_info.patch  icu4c_build_config.patch  icu4c_custom_data.patch  icu4c_rpath.patch  icu4c_run_tools_w_qemu_if_endianess_differs.patch  icu4c_wasm.patch  lzma_meson_install.patch  (+14 more)
patches/: ctpp2_compile_ctpp2c_static.patch  ctpp2_dll_export_VMExecutable.patch  ctpp2_iconv_support.patch  ctpp2_mingw32.patch  icu4c_android_elf64_st_info.patch  icu4c_custom_data.patch  icu4c_fix_static_lib_name_mingw.patch  icu4c_noxlocale.patch  xapian_no_hardcode_lz.patch  xapian_pkgconfig.patch  zlib_std_libname.patch
scripts/: create_kiwix-desktop_appImage.sh  package_kiwix-desktop_windows.py  prepare_kiwix-desktop_appImage.sh  upload_kiwix_lib_android_to_bintray.py  upload_libkiwix_android_to_bintray.py
templates/: bash_wrapper.sh  cmake_android_cross_file.txt  cmake_cross_file.txt  cmake_ios_cross_file.txt  meson_android_cross_file.txt  meson_cross_file.txt
travis/: Dockerfile  Dockerfile_flatpak  appimage_builder.dockerfile  bionic_builder.dockerfile  compile_all.py  compile_all.sh  compile_custom_app.sh  deploy.sh  deploy_apk.sh  f30_builder.dockerfile  flatpak_builder.dockerfile  focal_builder.dockerfile  googleplay_android_developer-5a411156212c.json.enc  install_extra_deps.sh  kiwix-android.keystore.enc  make_release.sh  test_ks.ks.enc  travisci_builder_id_key.enc  upload_all_log.sh  upload_base_deps.sh  xenial_builder.dockerfile
(+15 files in other folders)
